add mask for inputs

--- a/projects/application-example/src/app/app.component.html
+++ b/projects/application-example/src/app/app.component.html
@@ -1,1 +1,1 @@
-<input allKeyboardMouseLock type="text" name="paste-teste" id="paste-teste"/>
+<input allKeyboardMouseLock alefCpfFormat type="text" name="paste-teste" id="paste-teste"/>
