--- a/projects/application-example/src/app/app.component.html
+++ b/projects/application-example/src/app/app.component.html
@@ -1,1 +1,41 @@
-<input allKeyboardMouseLock alefPisFormat type="text" name="paste-teste" id="paste-teste"/>
+<form class="form-format">
+  <fieldset>
+    <legend>Format Inputs With AlefFormat</legend>
+    <p>
+      <label for="cep">CEP</label><br/>
+      <input alefCepFormat type="text" name="cep" id="cep"/>
+    </p>
+    <p>
+      <label for="cnpj">CNPJ</label><br/>
+      <input alefCnpjFormat type="text" name="cnpj" id="cnpj"/>
+    </p>
+    <p>
+      <label for="date">Date</label><br/>
+      <input alefDateFormat type="text" name="date" id="date"/>
+    </p>
+    <p>
+      <label for="date-dashers">Date with dashers</label><br/>
+      <input alefDateWithDashersFormat type="text" name="date-dashers" id="date-dashers"/>
+    </p>
+    <p>
+      <label for="paste-lock">Paste lock</label><br/>
+      <input alefPastLock type="text" name="paste-lock" id="paste-lock"/>
+    </p>
+    <p>
+      <label for="money">Money</label><br/>
+      <input alefMoneyFormat type="text" name="money" id="money"/>
+    </p>
+    <p>
+      <label for="phone-ddi">Phone DDI</label><br/>
+      <input alefPhoneDDIFormat type="text" name="phone-ddi" id="phone-ddi"/>
+    </p>
+    <p>
+      <label for="phone">Phone</label><br/>
+      <input alefPhoneFormat type="text" name="phone" id="phone"/>
+    </p>
+    <p>
+      <label for="pis">Pis</label><br/>
+      <input alefPisFormat type="text" name="pis" id="pis"/>
+    </p>
+  </fieldset>
+</form>
